# eth

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  mypy.ini  pyproject.toml  run-clear.sh  run-lint.sh  run-load-resources.sh  run-load-test-fixture.sh  run-test-ci.sh  run-test.sh  run.py  run.py.ignore  run2.py  run3.py  run_bsc.py  run_eth.py  run_get_trx.py  run_tron.py
.github/workflows/: ci.yaml  lint.yml
aggregator/: price.py  price_test.parsed_trx.json  price_test.py
dto/: failedTrx.py  parsedTrx.py  price.py
dto/Infura/: transaction.py  transaction_test.get_log_payload.txt  transaction_test.method_id_payload.txt  transaction_test.py
dto/TronGrid/: contractType.py  event.py  transaction.py  transaction_test.payload.txt  transaction_test.py  transferAssetContract.py  transferContract.py  triggerSmartContract.py
explorerClient/: eth.py  tron.py
models/: exceptions.py
parser/: base.py  currencyLookup.py  currency_test.py  parserLookup.py
parser/Infura/: defn_currency.py  defn_parser.py  defn_status.py  parser_addLiquidity.py  parser_addLiquidityETH.py  parser_addLiquidityETH_test.payload.txt  parser_addLiquidityETH_test.py  parser_addLiquidity_test_1.payload.txt  parser_addLiquidity_test_1.py  parser_addLiquidity_test_2.payload.txt  parser_addLiquidity_test_2.py  parser_base.py  parser_claim.py  parser_claim_0x4e71d92d.py  parser_claim_0x4e71d92d_test.payload.txt  parser_claim_0x4e71d92d_test.py  parser_claim_test.payload.txt  parser_claim_test.py  parser_deposit.py  parser_deposit_test.payload.txt  parser_deposit_test.py  parser_getReward.py  parser_getReward_test.payload.txt  parser_getReward_test.py  parser_hardcoded.py  parser_leaveStaking.py  parser_leaveStaking_test.payload.txt  parser_leaveStaking_test.py  parser_removeLiquidityETHWithPermit.py  parser_removeLiquidityETHWithPermit_test.payload.txt  parser_removeLiquidityETHWithPermit_test.py  (+56 more)
priceLookup/: auto.py  band.py  base.py  bnb.py  bnb_test.py  bunny.py  cake.py  cream.py  crv.py  cyc.py  dai.py  eps.py  eth.py  fnx.py  lowb.py  mGOOGL.py  mNFLX.py  mTSLA.py  mdx.py  mist.py  momo_key.py  nrv.py  ren.py  srm.py  sushi.py  trx.py  trx_test.py  uni.py  unifi.py  ust.py  yahoo_finance.py  yahoo_finance_test.py  yfi.py  yfie.py  yfii.py
runner/: create_price_aggregator.py  eth.py  tron.py  tron.py.ignore
test/: eth_e2e_test.py  tron_e2e_test.py
(+88 files in other folders)
